[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piqrypt-crewai-integration"
version = "1.0.0"
description = "PiQrypt cryptographic audit trail bridge for CrewAI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PiQrypt Contributors", email = "piqrypt@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["cryptography", "crewai", "audit", "ai-agents", "aiss", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "piqrypt>=1.5.1",
    "crewai>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/piqrypt/piqrypt-crewai-integration"
Documentation = "https://github.com/piqrypt/piqrypt-crewai#readme"
Repository = "https://github.com/piqrypt/piqrypt-crewai"
"Bug Tracker" = "https://github.com/piqrypt/piqrypt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["piqrypt_crewai*"]
